update website files

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Donut Delights</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
   <!-- Place favicon.ico in the root directory -->
 
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -29,80 +29,106 @@
 <header>
      <a href="index.html"><img src="img/NEWLOGO.png" class="logo"></a>
      <div class="header1">
-         <a hreff="facebook.com"><img src="img/dd-facebook.png" class="social"></a>
-         <a href="instagram.com"><img src="img/dd-insta.png" class="social"></a>
-         <a href="twitter.com"><img src="img/dd-twitter.png" class="social"></a>
+         <a href="https://www.facebook.com" target="_blank"><img src="img/dd-facebook.png" class="social"></a>
+         <a href="https://www.instagram.com/?hl=en" target="_blank"><img src="img/dd-insta.png" class="social"></a>
+         <a href="https://twitter.com/" target="_blank"><img src="img/dd-twitter.png" class="social"></a>
     </div>
      <div class="header2"></div>
      <div class="header3"></div>
 </header>
     <main>
-         <div class="slideshow-container carousel slide" data-ride="carousel" data-interval="5000">
-                <div class="carousel-inner">
-                    <div class="mySlides fade">
-                        <img src="img/front.jpg" style="width:100%" alt="StoreFront">
-                    </div>
-
-                    <div class="mySlides fade">
-                        <img src="img/coffee.jpg" style="width:100%" alt="Coffee and Donuts">
-                    </div>
-
-                    <div class="mySlides fade">
-                        <img src="img/Doughnuts.JPG" style="width:100%" alt="">
-                    </div>
-                    </div>
-        
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-                </div>
+        <div>
+            <img src="img/store-front.jpg" style="width:100%;">
+        </div>
         <div class="menu_div">
-            <h2> Menu </h2>
+            <h2 style="padding-top: "> Menu </h2>
             <p class="menu_text"><strong>Bakers Dozen Donuts:</strong> Mix and Match any 13 regular donuts</p>
             <p class="menu_text"><strong>Regualr Donut:</strong>Chocolate frosted, vanilla frosted, boston cream, jelly filled, cream filled, glazed, chocolate glazed, marble twist, sugar raised, plain donut, plain cruller, honey wheat, jelly puff, cream puff, coffee roll.</p>
             <p class="menu_text"><strong>Fancy Donut:</strong> Bow tie, éclair, apple turnover, fancy coffee roll. </p>
             <p class="menu_text"><strong>French Cruller</strong></p>
             <p><strong>Top Sellers:</strong></p>
-            <div class="grid-container">
-                <div class="item1">Pistachio Pinwheels<img src="img/pistachio-pinwheels.jpg"</div>
-                <div class="item2">Boston Cream Delights</div>
-                <div calss="item3">Chocolate Confetti </div>
-                <div class="item4">Marshmellow Mayhem</div>
-                <div class="item5">French Twists</div>
-                <div class="item6">Bull Horns</div>
+            <div class="grid-container" style="justify-content: center;">
+                <div class="item1" style="width:60%; justify-content: center; text-align: center;">
+                    Pistachio Pinwheels<img src="img/pistachio-pinwheels.jpg" height="100px" width="140px;" id="menu-img">
+                </div>
+                <div class="item2" style="width:60%; float:left; text-align: center;">
+                    Boston Cream Delights<img src="img/boston-cream-delights-3.jpg" height="100px;" width="140px;">
+                </div>
+                <div class="item3" style="width:60%; float:left; text-align: center;">
+                    Chocolate Confetti<img src="img/chocolate-confetti.jpg" height="100px;" width="140px;" id="menu-img">
+                </div>
+                <div class="item4" style="width:60%; justify-content: center; text-align: center;">
+                    Marshmellow Mayhem<img src="img/marshmellow-mayhem-2.jpg" height="100px;" width="140px;">
+                </div>
+                <div class="item5" style="width:60%; float: left; text-align: center;">
+                    French Twists<img src="img/french-twist.jpg" height="100px;" width="140px;" id="menu-img"> 
+                </div>
+                <div class="item6" style="width:60%; float: left; text-align: center;">
+                    Bull Horns<img src="img/bull-horns.jpg" height="100px;" width="140px;" id="menu-img">
+                </div>
             </div>
         </div>
     <div class="line"></div>
     <div>
-        <div>YoutubeVideo</div>
+        <div class="content" style="justify-content: center;">
+                <iframe width="600px" height="400px;" style="padding: 20px;" src="https://www.youtube.com/embed/aWMjUQFEGd0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
     <div class="line"></div>
-    <div>
-        <h2>About Us</h2>
-        <p>Donut Delights was started in 1971 by Melvin Furballski, an immigrant baker from the far east coast of Poland. Known far and wide for his delicate pastries, Melvin fled his homeland in search of a better life for his family. In 1970 he landed in New York City and by chance he found an open seat on a bus heading west. When an unexpected mechanical failure forced a three day delay in Champaign, Illinois, Furballski saw the need for a donut shop, so he decided to stay and make a new life for himself in Urbana, Illinois. 			
-        With only one hundred dollars to his name, he found an abandoned breadshop and within two days he had one of a kind donuts flying off the racks faster than he could bake them and things have never slowed down. Now you can find that same great donut recipe plus dozens more still being made with the same love and care as when Donut Delights first opened.</p>
+    <div class="content">
+        <h2 style="padding-top: 15px;">About Us</h2>
+        <br>
+        <img src="img/bakery.jpg" height="350px;"style="float:left;  padding: 0 25px;">
+        <p class="about-us">Donut Delights was started in 1971 by Melvin Furballski, an immigrant baker from the far east coast of Poland. Known far and wide for his delicate pastries, Melvin fled his homeland in search of a better life for his family. In 1970 he landed in New York City and by chance he found an open seat on a bus heading west. When an unexpected mechanical failure forced a three day delay in Champaign, Illinois, Furballski saw the need for a donut shop, so he decided to stay and make a new life for himself in Urbana, Illinois.</p>
+       <p class="about-us"> With only one hundred dollars to his name, he found an abandoned breadshop and within two days he had one of a kind donuts flying off the racks faster than he could bake them and things have never slowed down. Now you can find that same great donut recipe plus dozens more still being made with the same love and care as when Donut Delights first opened.</p>
+        <br>
+        <br>
+    <div class="grid-container" style="margin:20px; grid-column-gap: 20px;">
+        <div class="gif"><img src="img/vetsAdSmall.gif" height="100px"></div>
+        <div width="50%" class="form">
+            <form action="https://formspree.io/megan_perry106@yahoo.com" method="POST">
+            Subsribe to our news letter for the latest on our seasonal offerings
+            and special events
+            <input type="text" name="name">
+            <input type="email" name="_replyto">
+            <input type="submit" value="Send">
+            </form>
+        </div>
+        </div>
     </div>
     <div class="line"></div>
     <div>
         <h2>Contact US</h2>
+        <div class="grid-container">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.2480270702113!2d-88.22868718546667!3d40.11447578189181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd76a77607879%3A0xabcbde07e6508b09!2s2112+W+Main+St%2C+Urbana%2C+IL+61801!5e0!3m2!1sen!2sus!4v1544319913066" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="contact">
+            <br>
+            <p><strong>Hours: 7 am to 7 pm M-F</strong></p>
+            <br>
+            <p><img src="img/phone.png" style="padding: 10px;">217-555-1234</p>
+            <br>
+            <p><img src="img/email.png" style="padding: 10px;">contact@donutdelights.com</p>
+            <br>
+            <p><img src="img/location.png" style="padding: 10px;">2112 West Main St</p>
+        </div>
+        </div>
     </div>
     </main>
-  <script src="js/vendor/modernizr-3.6.0.min.js">Donut Delights was started in 1971 by Melvin Furballski, an immigrant baker from the far east coast of Poland. Known far and wide for his delicate pastries, Melvin fled his homeland in search of a better life for his family. In 1970 he landed in New York City and by chance he found an open seat on a bus heading west. When an unexpected mechanical failure forced a three day delay in Champaign, Illinois, Furballski saw the need for a donut shop, so he decided to stay and make a new life for himself in Urbana, Illinois. 			With only one hundred dollars to his name, he found an abandoned breadshop and within two days he had one of a kind donuts flying off the racks faster than he could bake them and things have never slowed down. Now you can find that same great donut recipe plus dozens more still being made with the same love and care as when Donut Delights first opened.</script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write(' 
-  <script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script src="js/Carousel2.js"></script>
-    
-    </script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130664534-1"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-130664534-1
+');
+</script>
 </body>
 
 </html>
